# CSE6242_Streamlit

./: .gitattributes  .gitignore  README.md  app.py  debug.py  directory_structure.txt  download_data.py  flask_requirements.txt  packages.txt  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py
data/: artist_id_and_name.csv  artist_term_components.csv  non_nest_PCA.lzma  pitches_PCA.lzma  relevant_artist_columns.lzma  similarity.py  structured_similarity_output.csv  timbres_PCA.lzma
misc/: Artist Similarity Graph edited.ipynb  Artist Similarity Graph.ipynb  do_artist_terms.ipynb  nested_columns_commandline.py  prelim_eda_3_13_2025_srs.ipynb  prep_and_run_cosine_similarity.ipynb  reshape_and_analyze.ipynb
scripts/: compress_pkl_files.py  convert_pkl_to_parquet.py  download_helpers.py  file_utils.py  improved_pkl_converter.py  similarity.py
templates/: index.html
